crates/requirements-txt/src/snapshots/requirements_txt__test__parse-unix-hash.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxtFileError {
    file: "<REQUIREMENTS_DIR>/hash.txt",
    error: Pep508 {
        source: Pep508Error {
            message: String(
                "Missing space before '#', the end of the URL is ambiguous",
            ),
            start: 10,
            len: 1,
            input: "./editable# comment",
        },
        start: 49,
        end: 68,
    },
}
