crates/requirements-txt/src/snapshots/requirements_txt__test__parse-whitespace.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    version_or_url: None,
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/whitespace.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/whitespace.txt",
            ),
        },
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "pandas",
                    ),
                    extras: [
                        ExtraName(
                            "tabulate",
                        ),
                    ],
                    version_or_url: Some(
                        Url(
                            VerbatimUrl {
                                url: Url {
                                    scheme: "https",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: Some(
                                        Domain(
                                            "github.com",
                                        ),
                                    ),
                                    port: None,
                                    path: "/pandas-dev/pandas",
                                    query: None,
                                    fragment: None,
                                },
                                given: Some(
                                    "https://github.com/pandas-dev/pandas",
                                ),
                            },
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/whitespace.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/whitespace.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
