crates/requirements-txt/src/snapshots/requirements_txt__test__parse-windows-bare-url.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Path(
                            ParsedPathUrl {
                                url: Url {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                lock_path: "./scripts/packages/black_editable",
                                editable: false,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: Url {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./scripts/packages/black_editable",
                            ),
                        },
                    },
                    extras: [],
                    marker: None,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Path(
                            ParsedPathUrl {
                                url: Url {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                lock_path: "./scripts/packages/black_editable",
                                editable: false,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: Url {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "./scripts/packages/black_editable",
                            ),
                        },
                    },
                    extras: [
                        ExtraName(
                            "dev",
                        ),
                    ],
                    marker: None,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Unnamed(
                UnnamedRequirement {
                    url: VerbatimParsedUrl {
                        parsed_url: Path(
                            ParsedPathUrl {
                                url: Url {
                                    scheme: "file",
                                    cannot_be_a_base: false,
                                    username: "",
                                    password: None,
                                    host: None,
                                    port: None,
                                    path: "/<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                    query: None,
                                    fragment: None,
                                },
                                install_path: "<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                lock_path: "./scripts/packages/black_editable",
                                editable: false,
                            },
                        ),
                        verbatim: VerbatimUrl {
                            url: Url {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/<REQUIREMENTS_DIR>/scripts/packages/black_editable",
                                query: None,
                                fragment: None,
                            },
                            given: Some(
                                "file:///scripts/packages/black_editable",
                            ),
                        },
                    },
                    extras: [],
                    marker: None,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/bare-url.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
